force-app/main/default/objects/Account/fields/Acknowledgement_Required__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acknowledgement Required</label>
    <type>Checkbox</type>
</CustomField>