force-app/main/default/objects/Account/fields/Attestation_Code__c.field-meta.xml
<CustomField>
    <fullName>Attestation_Code__c</fullName>
    <label>Attestation Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>