force-app/main/default/objects/Account/fields/CACTUS_Assignment__c.field-meta.xml
<CustomField>
    <fullName>CACTUS_Assignment__c</fullName>
    <label>CACTUS Assignment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>OPM</fullName>
            </value>
            <value>
                <fullName>TX</fullName>
            </value>
            <value>
                <fullName>IA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>