force-app/main/default/objects/Account/fields/Case_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Case_Sequence__c</fullName>
    <label>Case Sequence</label>
    <length>10</length>
    <type>Text</type>
</CustomField>