force-app/main/default/objects/Account/fields/Contract_Party__c.field-meta.xml
<CustomField>
    <fullName>Contract_Party__c</fullName>
    <label>Contract Party</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>