force-app/main/default/objects/Account/fields/Dispute_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Narrative__c</fullName>
    <label>Dispute Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>