force-app/main/default/objects/Account/fields/Document_List__c.field-meta.xml
<CustomField>
    <fullName>Document_List__c</fullName>
    <label>Document List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>