force-app/main/default/objects/Account/fields/Enable_Document_List__c.field-meta.xml
<CustomField>
    <fullName>Enable_Document_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Document List</label>
    <type>Checkbox</type>
</CustomField>