force-app/main/default/objects/Account/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee</label>
    <referenceTo>Fee__c</referenceTo>
    <relationshipLabel>Fee</relationshipLabel>
    <relationshipName>Fee</relationshipName>
    <type>Lookup</type>
</CustomField>