force-app/main/default/objects/Account/fields/Health_Plan_Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Health_Plan_Denial_Reason__c</fullName>
    <label>Health Plan Denial Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>