force-app/main/default/objects/Account/fields/Introduction_Reference__c.field-meta.xml
<CustomField>
    <fullName>Introduction_Reference__c</fullName>
    <inlineHelpText>Enter the URL where the reference is stored.</inlineHelpText>
    <label>Introduction Reference</label>
    <type>Url</type>
</CustomField>