force-app/main/default/objects/Account/fields/Is_Licensed_In_The_State__c.field-meta.xml
<CustomField>
    <fullName>Is_Licensed_In_The_State__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Must Be Licensed In the State</label>
    <type>Checkbox</type>
</CustomField>