force-app/main/default/objects/Account/fields/Link_To_Document_List_Sample__c.field-meta.xml
<CustomField>
    <fullName>Link_To_Document_List_Sample__c</fullName>
    <inlineHelpText>Enter the URL where the document list sample is stored</inlineHelpText>
    <label>Link To Document List Sample</label>
    <type>Url</type>
</CustomField>