force-app/main/default/objects/Account/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Decision Letter Recipients and Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>