force-app/main/default/objects/Account/fields/Priority_Type__c.field-meta.xml
<CustomField>
    <fullName>Priority_Type__c</fullName>
    <label>Priority Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Expedited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>