force-app/main/default/objects/Account/fields/Program_CACTUS_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Program_CACTUS_Assignment__c</fullName>
    <label>CACTUS Assignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>