force-app/main/default/objects/Account/fields/Program_Email__c.field-meta.xml
<CustomField>
    <fullName>Program_Email__c</fullName>
    <label>Program Email</label>
    <type>Email</type>
</CustomField>