force-app/main/default/objects/Account/fields/Program_Medical_Review_Email_Box__c.field-meta.xml
<CustomField>
    <fullName>Program_Medical_Review_Email_Box__c</fullName>
    <label>Program Medical Review Email Box</label>
    <type>Email</type>
</CustomField>