force-app/main/default/objects/Account/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <label>Program Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>