force-app/main/default/objects/Account/fields/Report_Fields__c.field-meta.xml
<CustomField>
    <fullName>Report_Fields__c</fullName>
    <formula>Name +&quot;, &quot; +  Program_Code__c + &quot;, &quot;+ TEXT(Project_State__c) + &quot;, &quot;+  Program_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Fields</label>
    <type>Text</type>
</CustomField>