force-app/main/default/objects/Account/fields/Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Review_Type__c</fullName>
    <label>Review Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical Necessity</fullName>
            </value>
            <value>
                <fullName>Experimental Investigation</fullName>
            </value>
            <value>
                <fullName>Non-Formulary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>