force-app/main/default/objects/Account/fields/Reviewer_Flag__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewer Flag</label>
    <type>Checkbox</type>
</CustomField>