force-app/main/default/objects/Account/fields/Standard_Of_Review__c.field-meta.xml
<CustomField>
    <fullName>Standard_Of_Review__c</fullName>
    <label>Standard Of Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>