force-app/main/default/objects/Account/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <length>5</length>
    <type>Text</type>
</CustomField>